src/styles/index.scss
@use "./functions" as *;
@use "./responsive" as *;
@use "./reset";
@use "./font";
@use "./variables";

html {
  color-scheme: dark light;
}

body {
  background-color: var(--theme-base);
  color: var(--theme-text);
  min-height: 100vh;
  width: 100vw;
}

.sans-serif, body {
  font-family: "Nunito", -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, Adwaita Sans, Cantarell, Ubuntu, roboto, noto, helvetica, arial, sans-serif;
}

.mono, code {
  font-family: Menlo, Consolas, Monaco, Adwaita Mono, Liberation Mono, Lucida Console, monospace;
}

.serif, em {
  font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
}

a {
  text-decoration: none;
  color: theme(overlay1);
  border-radius: 4px;
  cursor: pointer;
}

.button {
  display: inline-block;

  color: theme(subtext0);
  background-color: theme(surface0);
  transition: background-color 200ms ease-in-out;

  margin: 0 spacing(4);
  border-radius: 99em;
  padding: 0 spacing(32);
  width: fit-content;
  height: 3rem;
  line-height: calc(3rem - spacing(32) / 2 / 2);
  font-size: font-size(20);

  text-decoration: none;
  cursor: pointer;

  &:hover {
    color: theme(subtext1);
    background-color: theme(surface1);
  }

  &.accent {
    color: theme(crust);
    background-color: theme(skye);

    &:hover {
      background-color: color-mix(in oklch, theme(skye), theme(base) 10%);
    }
  }
}

p {
  line-height: 1.5;

  a {
    padding: 0 spacing(8);
    background-color: theme(surface0);
    transition: background-color 200s ease-in-out;

    &:hover {
      background-color: theme(surface1);
    }
  }
}

#app {
  height: 100%;
}

main {
  height: 100%;

  #page {
    margin: 6rem 20% 2rem;

    @include ontablet() {
      margin: 6rem 10% 2rem;
    }
    @include onmobile() {
      margin: 6rem 5% 2rem;
    }
  }
}

::selection {
  background-color: theme(surface1);
}

::placeholder {
  color: theme(overlay1);
}

input.search[type=text] {
  border: 1px solid transparent;
  border-radius: 99em;

  height: 2.4rem;
  padding: 0 1rem;

  font-size: font-size(16);

  background-color: theme(mantle);
}

